# licenses_pro_gen

./: Cargo.toml  README.md
src/: main.rs
