[package]
name = "licenses_pro_gen"
description="Simple license generating tool for licenses_pro."
repository="https://github.com/jacks0n9/licenses_pro_gen.git"
license="MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
licenses_pro = "0.1.0"
serde = {version="1.0.195",features=["serde_derive"]}
serde_json = "1.0.111"
